--- a/distro/rootfs.yml
+++ b/distro/rootfs.yml
@@ -8,6 +8,7 @@
 
 {{- $base := or .base "ubuntu" -}}
 {{- $suite := or .suite "jammy" -}}
+{{- $type := or .type "minimal" -}}
 
 architecture: arm64
 
@@ -58,18 +59,26 @@ actions:
     packages:
       - libncurses-dev
 
+{{ if eq $type "qt" }}
+  - action: apt
+    description: Install essential qt libs
+    packages:
+      - qtbase5-dev
+      - qt6-base-dev
+{{ end }}
+
   - action: run
     description: Setup host
     chroot: true
     command: |
-      echo "{{ $base-$suite }}" >/etc/hostname
-      echo "127.0.0.1	localhost {{ $base-$suite }}" >/etc/hosts
+      echo "{{ $base }}-{{ $suite }}" >/etc/hostname
+      echo "127.0.0.1	localhost {{ $base }}-{{ $suite }}" >/etc/hosts
 
   - action: run
     description: Add symlinks needed for cross compilation
     chroot: true
     command: |
-      wget --no-verbose -O /usr/local/bin/SSymlinker https://raw.githubusercontent.com/abhiTronix/raspberry-pi-cross-compilers/master/utils/SSymlinker
+      wget --no-clobber --no-verbose -O /usr/local/bin/SSymlinker https://raw.githubusercontent.com/abhiTronix/raspberry-pi-cross-compilers/master/utils/SSymlinker
       chmod +x /usr/local/bin/SSymlinker
       SSymlinker -s /usr/include/aarch64-linux-gnu/asm -d /usr/include
       SSymlinker -s /usr/include/aarch64-linux-gnu/gnu -d /usr/include
