--- a/distro/Taskfile.yml
+++ b/distro/Taskfile.yml
@@ -5,12 +5,14 @@ version: '3'
 
 vars:
   DEBOS_VERSION: '{{ .DEBOS_VERSION | default "v1.1.3-custom" }}'
+  DISTRO_HOSTNAME: '{{ .DISTRO_BASE }}-{{ .DISTRO_SUITE }}'
 
 tasks:
 
   docker-build:
     internal: true
     cmds:
+      - docker run --rm --privileged multiarch/qemu-user-static --reset -p yes # fix exec format error when using chroot
       - cd src/debos && docker build --tag t3gemstone/debos:{{ .DEBOS_VERSION }} --file docker/Dockerfile .
 
   docker-run:
@@ -50,6 +52,7 @@ tasks:
             --template-var="base:{{ .DISTRO_BASE }}"
             --template-var="suite:{{ .DISTRO_SUITE }}"
             --template-var="type:{{ .DISTRO_TYPE }}"
+            --template-var="hostname:{{ .DISTRO_HOSTNAME }}"
             {{ .RECIPE_NAME }}'
         }
 
